--- a/broker.cfg
+++ b/broker.cfg
@@ -4,17 +4,17 @@ port = 1500
 plugins = openstack_generic
 
 [services]
-controller_url = http://0.0.0.0:5000
-monitor_url = http://0.0.0.0:5001
-optimizer_url = http://0.0.0.0:5002
-authorization_url = http://0.0.0.0:5003
+controller_url = http://0.0.0.0:1501
+monitor_url = http://0.0.0.0:1502
+optimizer_url = http://10.11.4.181:10003
+authorization_url = http://0.0.0.0:5001/authorization/run_application/
 
 [openstack_generic]
-user = asperathos
-password = asperathos
-auth_ip = https://my.openstack.cloud
-project_id = 29380d210d98bdsc9m29jm231r901hn23
-user_domain_name = asperathos
-public_key = asperathos_key
-key_path = /home/asperathos/.ssh/asperathos_key
-log_path = /var/log/asperathos/broker 
+public_key = devstack
+key_path = /home/ubuntu/.ssh/asperathos_key
+log_path = /home/ubuntu/bigsea-manager/application_logs
+user =  hahaha
+password = hehehe
+auth_ip = https://cloud.lsd.ufcg.edu.br
+project_id = 77354b5fd08b4f0ba0b003716c95845e
+user_domain_name = geral
